examples/egress/egress-driver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-driver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-driver
  template:
    metadata:
      labels:
        app: egress-driver
      annotations:
        config.nsm.nginx.com/default-egress-allowed: "true"
    spec:
      containers:
      - name: egress-driver
        image: curlimages/curl:7.72.0
        imagePullPolicy: IfNotPresent
        command: [ "/scripts/egress-driver.sh" ]
        volumeMounts:
        - name: egress-driver
          mountPath: /scripts
      volumes:
      - name: egress-driver
        configMap:
          name: egress-driver
          defaultMode: 0755
